<?xml version="1.0"?>
<package>
  <name>yanshee_gazebo</name>
  <version>0.0.0</version>
  <description>The yanshee_gazebo package</description>

  <maintainer email="eddie.fan@ubtrobot.com">eddie</maintainer>


  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>mimic_joint_plugin</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>roscpp rospy</run_depend>



  <export>


  </export>
</package>
